# pigeon-blockchain

./: .eslintrc.json  .gitmodules  LICENSE  README.md  package.json  tsconfig.json
beacon/: cli.js  package.json
docs/: about.md  quickstart.md  release-notes.md  tsconfig.json
flock-cli/: cli.js  cli.ts  package.json
flock-manager/: package.json  server.js  server.ts  setup.cfg
flocks/: package.json
flocks/example-c/: build.sh
flocks/example-js/: build-flock.sh  package.json  tsconfig.json
flocks/example-js/src/: app.ts
flocks/examples/c/: 00_build.sh  build-flock.sh  run.sh
flocks/examples/nodejs/: build-flock.sh  build.sh  package.json  run.sh
flocks/hello-world/: build-flock.sh  package.json
flocks/js-algebra/: app.ts  package.json  run-local.sh  tsconfig.json
flocks/js-algebra/src/: app.ts
flocks/pigeon-blockchain/: 00_build.sh  build-flock.sh  build.sh  package.json  run.sh
flocks/pigeon-blockchain/blockchain/: Block.js  BlockChain.js  blockapp.ts  package.json
lib/: package.json  server.ts
old/flock-manager/: pyproject.toml
scripts/: flock-start.ts  install-deps.sh  package.json  tsconfig.json
scripts/src/: flock-start.ts
scripts/test/: test.ts
src/: flock-start.ts
src/beacon/: .eslintrc.json  app.ts  build-flock.sh  build.sh  cli.ts  package.json  run.sh  server.ts
src/beacon/columba-beacon/: app.ts  package.json  run.sh
src/beacon/pigeon-beacon/: app.ts  package.json  run.sh
src/flocks/js-algebra/: app.ts  (+7 more)
src/manager/: app.ts  cli.ts  flock-manager.ts  index.ts  package.json  run.sh  tsconfig.json
test/: test.ts
(+25 files in other folders)
