[metadata]
name = flock-manager
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pigeon-blockchain/pigeon-blockchain
project_urls =
    Bug Tracker = https://github.com/pigeon-blockchain/pigeon-blockchain
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
   flask
scripts =
   bin/flock-manager.py

[options.packages.find]
where = src
